--- a/index2.html
+++ b/index2.html
@@ -5,25 +5,12 @@
   <meta charset="utf-8">
   <title>Mavis calendar viz</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <div id="left-container">
-    <div id="description-box">
-      <header id="event-title"></header>
-      <ul id="event-details">
-      </ul>
-    </div>
-  </div>
-  <div id="right-container">
+  <div class="container">
+    <h1>Calendar Viz</h1>
     <div>
-      <table id="calendar-viz-tier">
-        <thead>
-          <tr><th></th></tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
       <table id="calendar-viz">
         <thead>
         </thead>
@@ -33,6 +20,6 @@
     </div>
   </div>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="ui.js"></script>
+  <script src="ui2.js"></script>
 </body>
 </html>
